<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tbLoginActivity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryVariant"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:overScrollMode="ifContentScrolls">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etErLoginEmail"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="3dp"
                android:hint="@string/etLoginEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="emailAddress"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etErLoginPassword"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:endIconMode="password_toggle"
                android:layout_marginVertical="3dp"
                android:hint="@string/etLoginPassword">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLogin"
                style="@style/btnLoginRegister"
                android:text="@string/buttonLogin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="end"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:id="@+id/tvResendEmail"
                    style="@style/tvLoginRegisterForgot"
                    android:layout_width="0dp"
                    android:layout_margin="0dp"
                    android:layout_weight="3"
                    android:text="@string/textViewResendEmail"
                    android:textAlignment="textStart"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    style="@style/tvLoginRegisterForgot"
                    android:layout_width="0dp"
                    android:layout_margin="0dp"
                    android:layout_weight="2"
                    android:text="@string/textViewForgotPassword"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvRegisterNow"
                style="@style/tvLoginRegisterForgot"
                android:text="@string/textViewRegisterNow" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>